# cpp_snake_engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
